--- a/src/templates/createProduct.html
+++ b/src/templates/createProduct.html
@@ -3,33 +3,35 @@
 
 <form class="row" #productForm="ngForm">
 
-    <div class="options_wrapper">
-        <input type="text" value="" [(ngModel)] = "product.title" id="title" name="title" placeholder="название товара">
-        <input type="text" value="" [(ngModel)] = "product.qrcode" id="qrcode" name="qrcode" placeholder="URL">
+    <div class="col-md-6">
+        <label>название товара</label>
+        <input type="text" value="" [(ngModel)] = "product.title" id="title" name="title">
     </div>
-    <div class="col-md-12">
-    <button class="btn btn-primary" (click)="openImages()">добавить опцию</button>
-        <div class="list" ngClass = "{{listIsHidden == false ? 'open' : '' }}">
+    <div class="col-md-6">
+        <label> URL для QR кода</label>
+        <input type="text" value="" [(ngModel)] = "product.qrcode" id="qrcode" name="qrcode">
+    </div>
 
-            <div class="options-image" *ngFor="let image of imagesArray" (click) = "addOptionImage(image)">
-                <img src="{{image}}">
+    <div class="col-md-3">
+        <div class="options_wrapper">
+            <button class="btn btn-primary add-option-btn" (click)="openImages()">добавить опцию</button>
+            <div class="list" ngClass = "{{listIsHidden == false ? 'open' : '' }}">
+                <div class="options-image" *ngFor="let image of imagesArray" (click) = "addOptionImage(image)">
+                    <img src="{{image}}">
+                </div>
             </div>
-
+            <div class="option text-center" *ngFor="let option of product.options; let i = index" >
+                <img src="{{option.icon}}">
+                <textarea type="text" value="{{option.name}}" name="name-{{i}}" [(ngModel)] = "option.name"></textarea>
+                <button type="button" class="btn btn-primary" (click)="removeOption(i)"><i class="fa fa-minus" aria-hidden="true"></i></button>
+            </div>
+            <div class="option present_wrapper text-center">
+                <img src="./assets/img/present.png">
+                <textarea type="text" value="{{product.present}}" name="present" [(ngModel)] = "product.present"></textarea>
+            </div>
         </div>
     </div>
-
-    <div class="options_wrapper">
-        <div class="option text-center" *ngFor="let option of product.options; let i = index" >
-            <button type="button" class="btn btn-primary" (click)="removeOption(i)"><i class="fa fa-minus" aria-hidden="true"></i></button>
-            <img src="{{option.icon}}">
-            <textarea type="text" value="{{option.name}}" name="name-{{i}}" [(ngModel)] = "option.name"></textarea>
-        </div>
-        <div class="option present_wrapper text-center">
-            <img src="./assets/img/present.png">
-            <textarea type="text" value="{{product.present}}" name="present" [(ngModel)] = "product.present"></textarea>
-        </div>
-    </div>
-
+    <div class="col-md-9">
     <div class="info_block">
         <ul class="main-info">
             <li><b>Дисплей:</b><input type="text" value="" [(ngModel)] = "product.display" id="display" name="display"></li>
@@ -37,11 +39,15 @@
             <li><b>Память:</b><input type="text" value="" [(ngModel)] = "product.ram" id="ram" name="ram"></li>
             <li *ngIf="productType == 'notebook'"><b>Видеокарта:</b><input type="text" value="" [(ngModel)] = "product.video" id="video" name="video"></li>
             <li><b>Батарея:</b><input type="text" value="" [(ngModel)] = "product.battery" id="battery" name="battery"></li>
+            <li *ngIf="productType == 'portative'"><b>Функции:</b><input type="text" value="" [(ngModel)] = "product.functions" id="functions" name="functions"></li>
             <li><b>OC:</b><input type="text" value="" [(ngModel)] = "product.os" id="os" name="os"></li>
             <li><b>Другое:</b><input type="text" value="" [(ngModel)] = "product.other" id="other" name="other"></li>
             <input type="hidden" value="" [(ngModel)] = "product.type" id="type" name="type">
         </ul>
         <div class="price_block_inputs text-center">
+            <label>
+                <input type="checkbox" [(ngModel)]="product.preorder" name="preorder"> Предзаказ
+            </label>
 
             <div class="price_wrapper colorRed">
                 <div class="bycash_pric"><input class="text-center" type="number" value="" [(ngModel)] = "product.byCash" id="byCash" name="byCash"></div>
@@ -54,9 +60,12 @@
 
             <div class="current_price"><input class="text-center" type="number" value="" [(ngModel)] = "product.price" id="price" name="price"></div>
             <p><b>кредит/рассрочка*</b></p>
-            <div class="form-group-save">
-                <button class="btn btn-primary save" (click)="save()" type="submit" name="list"> <i class="fa fa-floppy-o" aria-hidden="true"></i> сохранить </button>
-            </div>
+
+        </div>
+
+    </div>
+        <div class="form-group-save">
+            <button class="btn btn-primary save" (click)="save()" type="submit" name="list"> <i class="fa fa-floppy-o" aria-hidden="true"></i> сохранить </button>
         </div>
     </div>
 
@@ -76,7 +85,7 @@
                     <img src="{{option.icon}}">
                     <div class="option_info">{{option.name}}</div>
                 </div>
-                <div class="option present_wrapper" *ngIf="product.present != ''">
+                <div class="option present_wrapper text-center" *ngIf="product.present != ''">
                     <img src="./assets/img/present.png">
                     <div class="option_info present_title colorRed">{{product.present}}</div>
                 </div>
@@ -87,11 +96,16 @@
                     <li><b>Чипсет:</b>{{product.chipset}}</li>
                     <li><b>Память:</b>{{product.ram}}</li>
                     <li *ngIf="product.video"><b>Видеокарта:</b>{{product.video}}</li>
-                    <li><b>Батарея:</b>{{product.battery}}</li>
+                    <li *ngIf="product.battery"><b>Батарея:</b>{{product.battery}}</li>
+                    <li *ngIf="product.functions"><b>Функции:</b>{{product.functions}}</li>
                     <li><b>OC:</b>{{product.os}}</li>
                     <li><b>Другое:</b>{{product.other}}</li>
                 </ul>
                 <div class="price_block text-center">
+
+                    <div class="price_wrapper colorRed" *ngIf="product.preorder">
+                        <div class="preorder">ПРЕДЗАКАЗ</div>
+                    </div>
                     <div class="price_wrapper colorRed" *ngIf="product.byCash > 0">
                         <div class="bycash_price"><span>{{product.byCash}}</span> руб* </div>
                         <p><b>*одним платежом</b></p>
